<resources>
    <string name="yes">Yes, please</string>
    <string name="no">No</string>
    <string name="app_name">SecureSMSClient</string>
    <string name="action_add">Add new server</string>
    <string name="action_about">About</string>
    <string name="action_edit_server">Edit servers</string>
    <string name="action_done_edit_server">Done editing</string>
    <string name="action_fakeSMS">SMS</string>
    <string name="main_checkbox_connect_on_startup">Connect on Startup</string>
    <string name="main_button_server_connect">Connect</string>
    <string name="main_edittext_server_ip_hint">IP address</string>
    <string name="main_button_server_autoconnect">Autoconnect</string>
    <string name="permission_title">Permissions denied</string>
    <string name="permission_msg">To use this application some permissions are required. Would you like to grant those permissions?</string>
    <string name="welcome">Welcome to SecureSMSNotifier!</string>
    <string name="app_desc">This application encrypts received SMS, sends them to your PC and visualizes them.</string>
    <string name="server">In order for this application to work correctly you need to install the following plugin for your Browser.</string>
    <string name="server_link">https://www.secureSMSnotifier.com/download</string>
    <string name="server_connect">After installing, run the server application and scan the given QR with this app. To do so, press the lower floating camera symbol. Afterwards, the server will be inserted in the following list.</string>
    <string name="action_about_msg">Created by <b>Alex &amp; Alex</b>\n\n\u00A9 2017 SecureSMSClient</string>
    <string name="scanner_download">No scanner found</string>
    <string name="scanner_download_msg">Download a scanner code activity?</string>
    <string name="listView_item_icon">Notebook icon</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="rename">Rename</string>
    <string name="cancel">Cancel</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="details">Details</string>
    <string name="server_popup_msg">Server name:\n%s\n\nIP address:\n%s:%s\n\nAdded:\n%s</string>
    <string name="server_delete_msg">Do you really want to permanently remove the server %s?</string>
    <string name="server_rename_msg">Enter new name here:</string>
    <string name="server_list_header">Server list</string>
    <string name="fab_add_msg">Server was added . . .</string>
    <string name="fab_delete_msg">Server was deleted . . .</string>
    <string name="listView_empty">No server connected yet!</string>
    <string name="listView_404">404</string>
</resources>
