<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="55dip"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/listViewItemIconNotebook"
        android:layout_width="@android:dimen/app_icon_size"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_margin="@dimen/list_item_padding"
        android:contentDescription="@string/listView_item_icon"
        android:src="@drawable/notebook" />

    <ImageView
        android:id="@+id/listViewItemIconPc"
        android:layout_width="@android:dimen/app_icon_size"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_margin="@dimen/list_item_padding"
        android:contentDescription="@string/listView_item_icon"
        android:src="@drawable/pc"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/listViewItemSecondLine"
        android:layout_width="fill_parent"
        android:layout_height="26dip"
        android:layout_alignEnd="@+id/listViewItemFirstLine"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/listViewItemFirstLine"
        android:layout_marginLeft="@dimen/list_item_padding"
        android:layout_marginStart="@dimen/list_item_padding"
        android:layout_toEndOf="@id/listViewItemIconNotebook"
        android:layout_toLeftOf="@+id/listViewItemIconEnable"
        android:layout_toRightOf="@id/listViewItemIconNotebook"
        android:layout_toStartOf="@+id/listViewItemIconEnable"
        android:ellipsize="marquee"
        android:singleLine="true"
        android:text="Description"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/listViewItemFirstLine"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/listViewItemSecondLine"
        android:layout_alignParentTop="true"
        android:layout_alignWithParentIfMissing="true"
        android:layout_marginLeft="@dimen/list_item_padding"
        android:layout_marginStart="@dimen/list_item_padding"
        android:layout_toEndOf="@id/listViewItemIconNotebook"
        android:layout_toLeftOf="@+id/listViewItemIconEnable"
        android:layout_toRightOf="@id/listViewItemIconNotebook"
        android:layout_toStartOf="@+id/listViewItemIconEnable"
        android:gravity="center_vertical"
        android:singleLine="true"
        android:text="Example application"
        android:textSize="16sp"
        android:textStyle="bold" />


    <ImageView
        android:id="@+id/listViewItemIconEnable"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_marginBottom="@dimen/list_item_padding"
        android:layout_marginTop="@dimen/list_item_padding"
        android:layout_toLeftOf="@+id/listViewItemIconEdit"
        android:layout_toStartOf="@+id/listViewItemIconEdit"
        android:contentDescription="@string/rename"
        android:paddingEnd="@dimen/list_enable_padding"
        android:paddingRight="@dimen/list_enable_padding"
        android:src="@drawable/on" />

    <ImageView
        android:id="@+id/listViewItemIconDisable"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_marginBottom="@dimen/list_item_padding"
        android:layout_marginTop="@dimen/list_item_padding"
        android:layout_toLeftOf="@+id/listViewItemIconEdit"
        android:layout_toStartOf="@+id/listViewItemIconEdit"
        android:contentDescription="@string/rename"
        android:paddingEnd="@dimen/list_enable_padding"
        android:paddingRight="@dimen/list_enable_padding"
        android:src="@drawable/off"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/listViewItemIconEdit"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_centerVertical="true"
        android:layout_marginBottom="@dimen/list_item_padding"
        android:layout_marginEnd="0dp"
        android:layout_marginLeft="@dimen/list_item_padding"
        android:layout_marginRight="0dp"
        android:layout_marginStart="@dimen/list_item_padding"
        android:layout_marginTop="@dimen/list_item_padding"
        android:layout_toLeftOf="@+id/listViewItemIconDelete"
        android:layout_toStartOf="@+id/listViewItemIconDelete"
        android:contentDescription="@string/rename"
        android:src="@android:drawable/ic_menu_edit" />

    <ImageView
        android:id="@+id/listViewItemIconDelete"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_margin="@dimen/list_item_padding"
        android:contentDescription="@string/delete"
        android:src="@android:drawable/ic_menu_close_clear_cancel" />

</RelativeLayout>